--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html  >
 <head>
+  
+<!-- Global site tag (gtag.js) - Google Ads: 10934878927 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10934878927"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-10934878927');
+</script>
+
+  <!-- Event snippet for Заинтересованный потенциальный клиент conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-10934878927/rGxDCOulqMgDEM-FlN4o'});
+</script>
+
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
