--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html  >
 <head>
   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1D42MT3TE9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1D42MT3TE9');
+</script>
+  
 <!-- Global site tag (gtag.js) - Google Ads: 10934878927 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10934878927"></script>
 <script>
